@@ -30,6 +30,9 @@ $postgreSQLVacuumRegexps['VacuumingOrAnalyzingTable'] = new RegExp('/(vacuuming|
 $postgreSQLVacuumRegexps['RemovableInformation'] = new RegExp('/: found ([0-9]+) removable, ([0-9]+) nonremovable row versions in ([0-9]+) pages/');
 $postgreSQLVacuumRegexps['OperationInformation'] = new RegExp('/: moved ([0-9]+) row versions, truncated ([0-9]+) to ([0-9]+) pages/');
 $postgreSQLVacuumRegexps['VacuumDetail'] = new RegExp('/([0-9]+) dead row versions cannot be removed yet./');
+$postgreSQLVacuumRegexps['IndexCleanupInformation'] = new RegExp('/index "([^".]*)" now contains ([0-9]+) row versions in ([0-9]+) pages/');
+$postgreSQLVacuumRegexps['IndexCleanupDetail1'] = new RegExp('/([0-9]+) index row versions were removed./');
+$postgreSQLVacuumRegexps['IndexCleanupDetail2'] = new RegExp('/([0-9]+) index pages have been deleted, ([0-9]+) are currently reusable./');
 
 $postgreSQLVacuumRegexps['FSMInformation'] = new RegExp('/free space map contains ([0-9]+) pages in ([0-9]+) relations/');
 $postgreSQLVacuumRegexps['FSMInformationDetail'] = new RegExp('/A total of ([0-9]+) page slots are in use \(including overhead\)\./');
@@ -38,6 +41,9 @@ $postgreSQLVacuumRegexps['VacuumEnd'] = new RegExp('/^VACUUM$/');
 // PostgreSQLVacuumDetailLine
 $postgreSQLVacuumRegexps['VacuumDetailLine'] = new RegExp('/([0-9]+) dead row versions cannot be removed yet\. Nonremovable row versions range from ([0-9]+) to ([0-9]+) bytes long\. There were ([0-9]+) unused item pointers\. Total free space \(including removable row versions\) is ([0-9]+) bytes\. ([0-9]+) pages are or will become empty, including ([0-9]+) at the end of the table\. ([0-9]+) pages containing ([0-9]+) free bytes are potential move destinations\./');
 $postgreSQLVacuumRegexps['FSMDetailLine'] = new RegExp('/A total of ([0-9]+) page slots are in use \(including overhead\). ([0-9]+) page slots are required to track all free space. Current limits are:  ([0-9]+) page slots, ([0-9]+) relations, using ([0-9]+) KB./');
+
+// PostgreSQLIndexCleanupDetailLine
+$postgreSQLVacuumRegexps['IndexCleanupDetailLine'] = new RegExp('/(?:([0-9]+) index row versions were removed. )?([0-9]+) index pages have been deleted, ([0-9]+) are currently reusable./');
 
 $GLOBALS['postgreSQLVacuumRegexps'] =& $postgreSQLVacuumRegexps;
 
