@@ -1,3 +1,7 @@
+2006-07-23  Guillaume Smet <guillaume-pg@smet.org>
+
+	* added the collect of index cleanup information
+
 2006-07-19  Guillaume Smet <guillaume-pg@smet.org>
 
 	* more work on vacuum verbose output analysis
